Correction de la partie Header (ajout le flex-wrap)

--- a/style.css
+++ b/style.css
@@ -2,13 +2,22 @@
 body
 {
     font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
     
 }
 h1
 {
     font-weight: bolder;
 }
-
+/*flex-box partie Logo+Menu navigation*/
+#head1
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
 /*logo*/
 #logo
 {
@@ -23,9 +32,10 @@ h1
 {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     font-size: 1em;
     margin-left: 20px;
-    line-height: 10px;
+    line-height: 30px;
 }
 
 
@@ -35,7 +45,7 @@ nav ul
     display: flex;
     list-style-type: none;
     justify-content: end;
-    margin-right: 80px;
+    
     
 }
 
@@ -49,11 +59,10 @@ a
 }
 nav a
 {
-    
-    
+      
     color: black;
 }
-#bold
+#bold_blue
 {
     font-weight: bolder;
     color: #0065FC;
@@ -61,13 +70,14 @@ nav a
 nav a:hover
 {
     color: #0065FC;
-    text-decoration: overline;
-    
+    font-weight: bolder;
+    border-top: 1px solid #0065FC;
+    padding: 20px;
 }
-nav a:visited
+/* a:visited
 {
     color: grey;
-}
+}*/
 
 
  /*search field*/
@@ -78,7 +88,8 @@ nav a:visited
      flex-direction: row;
      justify-content: flex-start;
      margin-left: 20px;
-     width: 500px;
+     width: 50%;
+   
      
  }
  #map
@@ -141,9 +152,10 @@ nav a:visited
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: left;
     align-items: center;
-    width: 1000px;
+    flex-wrap: wrap;
+    width: 50%;
     list-style-type: none;
     padding: 0;
 
@@ -169,6 +181,7 @@ nav a:visited
 {
     font-weight: bolder;
     font-size: 1em;
+    margin-right: 30px;
 }
 #filtre img
 {
@@ -188,8 +201,9 @@ nav a:visited
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    flex-wrap: wrap;
     align-items: center;
-    width: 600px;
+    width: 60%;
     margin-left: 20px;
     
 }
@@ -216,8 +230,7 @@ nav a:visited
 /*Hebergements*/
 #sec1
 {
-    width: 1200px;
-    
+    width: 67%;
     background-color: #F2F2F2;
     margin-left: 20px;
     border-radius: 20px;
@@ -957,4 +970,16 @@ footer a
 }
 footer a:hover{
 color:#0065FC
+}
+
+@media all and (max-width: 480px)
+{
+    #head1
+    {
+        width: 25%;
+    }
+    #search
+    {
+        width: 20%
+    }
 }
